samples/_failures_safe/1761558180_31ef4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c26e8d5.c: In function ‘main’:
./samples/SAFE/__tmp_7c26e8d5.c:135:5: error: expected declaration or statement at end of input
  135 |     printf("Matrix Operations Program\n");
      |     ^~~~~~
